fix: keypress-tab align modifiers tooltip

--- a/packages/uhk-web/src/app/components/popover/tab/keypress/keypress-tab.component.scss
+++ b/packages/uhk-web/src/app/components/popover/tab/keypress/keypress-tab.component.scss
@@ -37,12 +37,8 @@
         }
 
         icon {
-            margin-left: 0.3em;
+            margin-left: 0.6em;
         };
-
-        .btn-toolbar {
-            display: inline-block;
-        }
     }
 
     .long-press-container {
